--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,10 @@
     "ilike",
     "jitsi",
     "jsonb",
+    "nilike",
+    "nlike",
     "nowrap",
+    "nsimilar",
     "recordfile",
     "shajs",
     "starttime",
