--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "@types/wavesurfer.js": "^3.3.1",
     "apollo": "^2.32.5",
     "babel-plugin-import": "^1.13.3",
-    "babel-plugin-react-intl": "^8.2.7",
+    "babel-plugin-react-intl": "7",
     "customize-cra": "^1.0.0",
     "env-cmd": "^10.1.0",
     "husky": "^4.3.0",
