--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
+    "moment-range": "^4.0.2",
     "moment-timezone": "^0.5.31",
     "mustache": "^4.1.0",
     "node-sass": "^4.14.1",
@@ -66,6 +67,7 @@
     "query-string": "^6.14.1",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
+    "react-calendar-heatmap": "^1.8.1",
     "react-dom": "^17.0.1",
     "react-intl": "^5.13.2",
     "react-player": "^2.9.0",
