--- a/package.json
+++ b/package.json
@@ -38,59 +38,13 @@
     "@ant-design/compatible": "^1.0.8",
     "@ant-design/icons": "^4.5.0",
     "@apollo/react-hooks": "3",
-    "@craftjs/core": "^0.1.0-beta.19",
-    "@fullcalendar/daygrid": "^5.3.2",
-    "@fullcalendar/react": "^5.3.1",
-    "antd": "4.9.4",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.14",
-    "apollo-link-batch-http": "^1.2.14",
-    "apollo-link-context": "^1.0.20",
-    "apollo-link-error": "^1.1.13",
-    "apollo-link-http": "^1.5.17",
-    "audio-recorder-polyfill": "^0.3.8",
-    "audiobuffer-to-wav": "^1.0.0",
-    "axios": "^0.21.1",
-    "braft-editor": "^2.3.9",
-    "coupon-code": "^0.4.5",
-    "graphql-tag": "^2.11.0",
-    "jsonwebtoken": "^8.5.1",
-    "lamejs": "^1.2.0",
-    "lodash": "^4.17.21",
-    "md5": "^2.3.0",
-    "moment": "^2.29.1",
-    "moment-range": "^4.0.2",
-    "moment-timezone": "^0.5.31",
-    "mustache": "^4.1.0",
-    "node-sass": "^4.14.1",
-    "nosleep.js": "^0.11.0",
-    "query-string": "^6.14.1",
-    "ramda": "^0.27.1",
-    "react": "^17.0.1",
-    "react-calendar-heatmap": "^1.8.1",
-    "react-contenteditable": "^3.3.5",
-    "react-dom": "^17.0.1",
-    "react-intl": "^5.13.2",
-    "react-player": "^2.9.0",
-    "react-responsive": "^8.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "react-social-login": "^3.4.12",
-    "react-sortablejs": "^6.0.0",
-    "react-star-rating-component": "^1.4.1",
-    "sortablejs": "^1.13.0",
-    "standardized-audio-context": "^25.1.9",
-    "styled-components": "^5.2.1",
-    "use-query-params": "^1.2.0",
-    "uuid": "^8.3.2",
-    "wavesurfer.js": "^4.1.1"
-  },
-  "devDependencies": {
     "@babel/cli": "^7.13.10",
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
+    "@craftjs/core": "^0.1.0-beta.19",
+    "@fullcalendar/daygrid": "^5.3.2",
+    "@fullcalendar/react": "^5.3.1",
     "@hot-loader/react-dom": "^17.0.1",
     "@types/audiobuffer-to-wav": "^1.0.0",
     "@types/braft-editor": "^2.2.0",
@@ -109,23 +63,67 @@
     "@types/styled-components": "^5.1.9",
     "@types/uuid": "^8.3.0",
     "@types/wavesurfer.js": "^3.3.1",
+    "antd": "4.9.4",
     "apollo": "^2.32.5",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-batch-http": "^1.2.14",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-error": "^1.1.13",
+    "apollo-link-http": "^1.5.17",
+    "audio-recorder-polyfill": "^0.3.8",
+    "audiobuffer-to-wav": "^1.0.0",
+    "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-react-intl": "7",
+    "braft-editor": "^2.3.9",
+    "coupon-code": "^0.4.5",
     "customize-cra": "^1.0.0",
     "env-cmd": "^10.1.0",
+    "graphql-tag": "^2.11.0",
     "husky": "^4.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "lamejs": "^1.2.0",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.4",
+    "lodash": "^4.17.21",
+    "md5": "^2.3.0",
+    "moment": "^2.29.1",
+    "moment-range": "^4.0.2",
+    "moment-timezone": "^0.5.31",
+    "mustache": "^4.1.0",
+    "node-sass": "^4.14.1",
+    "nosleep.js": "^0.11.0",
     "organize-imports-cli": "^0.8.0",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.1",
+    "query-string": "^6.14.1",
+    "ramda": "^0.27.1",
+    "react": "^17.0.2",
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.8",
+    "react-calendar-heatmap": "^1.8.1",
+    "react-contenteditable": "^3.3.5",
+    "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "react-intl": "^5.13.2",
     "react-intl-translations-manager": "^5.0.3",
+    "react-player": "^2.9.0",
+    "react-responsive": "^8.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "react-social-login": "^3.4.12",
+    "react-sortablejs": "^6.0.0",
+    "react-star-rating-component": "^1.4.1",
+    "sortablejs": "^1.13.0",
     "source-map-explorer": "^2.5.2",
-    "typescript": "^4.2.3"
+    "standardized-audio-context": "^25.1.9",
+    "styled-components": "^5.2.1",
+    "typescript": "^4.3.3",
+    "use-query-params": "^1.2.0",
+    "uuid": "^8.3.2",
+    "wavesurfer.js": "^4.1.1"
   },
   "husky": {
     "hooks": {
