--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/node": "^15.12.4",
     "@types/ramda": "^0.27.40",
     "@types/react": "^17.0.11",
+    "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.8",
     "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.7",
@@ -104,6 +105,7 @@
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.8",
     "react-calendar-heatmap": "^1.8.1",
+    "react-color": "^2.19.3",
     "react-contenteditable": "^3.3.5",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
