--- a/.github/workflows/deploy-to-s3.yml
+++ b/.github/workflows/deploy-to-s3.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      PUBLIC_URL: /admin
     steps:
       - uses: actions/checkout@main
       - uses: jeanlescure/react-deploy-to-s3-action@main
