--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-app-rewired start",
     "build": "yarn build:${NODE_ENV:-production}",
-    "build:development": "PUBLIC_URL=/admin env-cmd -f .env.development react-app-rewired build",
+    "build:development": "PUBLIC_URL=/admin CI=false env-cmd -f .env.development react-app-rewired build",
     "build:production": "PUBLIC_URL=/admin CI=false react-app-rewired build",
     "test": "react-scripts test",
     "typegen": "apollo client:codegen ./src/hasura.d.ts --outputFlat --target typescript",
