--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,9 @@
 PORT=5000
 
+REACT_APP_ID=demo
+
 # Hasura
-REACT_APP_API_HOST=rest-dev.lodestar.cc/v1
+REACT_APP_API_BASE_ROOT=https://demo-web.lodestar-dev.cc/api/v1
 REACT_APP_GRAPHQL_ENDPOINT=https://hasura-dev.kolable.com/v1/graphql
 REACT_APP_CLAIMS_NAMESPACE=https://hasura.io/jwt/claims
 
