--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # Hasura
-REACT_APP_API_HOST=rest.lodestar.cc/v1
+REACT_APP_API_BASE_ROOT=
 REACT_APP_GRAPHQL_ENDPOINT=https://hasura.kolable.com/v1/graphql
 REACT_APP_CLAIMS_NAMESPACE=https://hasura.io/jwt/claims
 
