--- a/.env.staging
+++ b/.env.staging
@@ -1,9 +1,5 @@
-PORT=5003
-
-REACT_APP_ID=xuemi
-
 # Hasura
-REACT_APP_API_BASE_ROOT=https://xuemi.lodestar-dev.cc/api/v1
+REACT_APP_API_BASE_ROOT=/api/v1
 REACT_APP_GRAPHQL_ENDPOINT=https://hasura-dev.kolable.com/v1/graphql
 REACT_APP_CLAIMS_NAMESPACE=https://hasura.io/jwt/claims
 
