--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "postinstall": "yarn upgrade lodestar-app-admin",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-app-rewired start",
-    "build": "CI=false react-app-rewired build",
-    "build:staging": "env-cmd -f .env.development npm run build",
+    "build": "PUBLIC_URL=/admin CI=false env-cmd -f .env.${NODE_ENV:-production} react-app-rewired build",
     "test": "react-scripts test",
     "typegen": "apollo client:codegen ./src/hasura.d.ts --outputFlat --target typescript",
     "format:organize-imports": "organize-imports-cli ./src/**/*.ts[x]",
