--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "chance": "^1.1.7",
-    "lodestar-app-admin": "git+https://5283f1eb2c0cbdec821bd2bc65e18c942c4d51f8:x-oauth-basic@github.com/urfit-tech/lodestar-app-admin.git#master"
+    "lodestar-app-admin": "urfit-tech/lodestar-app-admin.git#master"
   },
   "devDependencies": {
     "@types/chance": "^1.1.1"
