--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "chance": "^1.1.7",
     "lodestar-app-admin": "urfit-tech/lodestar-app-admin.git#master"
   },
+  "devDependencies": {
+    "@types/chance": "^1.1.1"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
