--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
   },
   "dependencies": {
     "chance": "^1.1.7",
-    "lodestar-app-admin": "urfit-tech/lodestar-app-admin.git#master"
-  },
-  "devDependencies": {
+    "lodestar-app-admin": "urfit-tech/lodestar-app-admin.git#master",
     "@types/chance": "^1.1.3"
   },
   "husky": {
