--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "source-map-explorer": "^2.5.2",
     "standardized-audio-context": "^25.1.9",
     "styled-components": "^5.2.1",
-    "typescript": "^4.3.4",
+    "typescript": "4.3.5",
     "use-query-params": "^1.2.0",
     "uuid": "^8.3.2",
     "wavesurfer.js": "^4.1.1"
