--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "chance": "^1.1.7",
-    "lodestar-app-admin": "urfit-tech/lodestar-app-admin.git#release"
+    "lodestar-app-admin": "urfit-tech/lodestar-app-admin.git#master"
   },
   "devDependencies": {
     "@types/chance": "^1.1.3"
