--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
-    "lodestar-app-element": "urfit-tech/lodestar-app-element.git#master",
+    "lodestar-app-element": "urfit-tech/lodestar-app-element.git#01dffc1ee30678289e05c81943e74ac7e746e0db",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
