--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
-    "lodestar-app-element": "urfit-tech/lodestar-app-element.git#9f3ff01b50984c79dab33031e78e6c1e2afb8640",
+    "lodestar-app-element": "urfit-tech/lodestar-app-element#0.0.2",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
