--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "node-sass": "4.14.1",
     "nosleep.js": "^0.11.0",
     "organize-imports-cli": "0.7.0",
-    "prettier": "^2.3.1",
+    "prettier": "2.4.1",
     "query-string": "^7.0.1",
     "ramda": "0.27.0",
     "react": "17.0.2",
