--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
-    "lodestar-app-element": "urfit-tech/lodestar-app-element#v0.0.4",
+    "lodestar-app-element": "urfit-tech/lodestar-app-element#7fea399a119cc34ea90c352cc18565631530d4ff",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
