--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
-    "lodestar-app-element": "urfit-tech/lodestar-app-element#v1.0.0-alpha",
+    "lodestar-app-element": "urfit-tech/lodestar-app-element#17dde478ed592a3917c7a43038069fab00d95c84",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
