--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
-    "lodestar-app-element": "urfit-tech/lodestar-app-element#a62840704a92303a632ce039ab501292a73e761c",
+    "lodestar-app-element": "urfit-tech/lodestar-app-element#b1d3ab6d3dda640bc1f18de0887fe409e652ee51",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
@@ -117,6 +117,7 @@
     "react-hot-loader": "^4.13.0",
     "react-intl": "5.20.9",
     "react-intl-translations-manager": "^5.0.3",
+    "react-is": "^17.0.2",
     "react-player": "^2.9.0",
     "react-responsive": "8.1.0",
     "react-router-dom": "5.2.0",
