--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-react": "^7.12.13",
     "@cloudflare/stream-react": "^1.2.0",
     "@craftjs/core": "0.1.0-beta.20",
+    "@craftjs/layers": "^0.1.0-beta.20",
     "@fullcalendar/daygrid": "^5.3.2",
     "@fullcalendar/react": "^5.3.1",
     "@hot-loader/react-dom": "^17.0.1",
