--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
-    "lodestar-app-element": "urfit-tech/lodestar-app-element#bb895a9ad73664ecedea48b8797302c10b45b701",
+    "lodestar-app-element": "urfit-tech/lodestar-app-element#v1.0.0",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
