--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "react-contenteditable": "^3.3.5",
     "react-dom": "17.0.2",
     "react-draggable": "^4.4.4",
+    "react-frame-component": "^5.1.0",
     "react-hot-loader": "^4.13.0",
     "react-intl": "5.20.9",
     "react-intl-translations-manager": "^5.0.3",
