--- a/.env.staging
+++ b/.env.staging
@@ -5,3 +5,6 @@ REACT_APP_CLAIMS_NAMESPACE=https://hasura.io/jwt/claims
 
 # AWS
 REACT_APP_S3_BUCKET=static-dev.kolable.com
+
+# FIXME: let us grab the style from head and put into iframe
+REACT_APP_SC_DISABLE_SPEEDY=true
