--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
-    "lodestar-app-element": "urfit-tech/lodestar-app-element#387a98215dfc14e9dfd2960cb21531937d10d3b6",
+    "lodestar-app-element": "urfit-tech/lodestar-app-element#master",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
