--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "braft-editor": "^2.3.9",
     "coupon-code": "^0.4.5",
     "customize-cra": "^1.0.0",
+    "dayjs": "^1.11.3",
     "env-cmd": "^10.1.0",
     "graphql-tag": "2.12.5",
     "husky": "4.3.8",
