--- a/.env.development
+++ b/.env.development
@@ -3,8 +3,8 @@ PORT=5000
 REACT_APP_ID=demo
 
 # Hasura
-REACT_APP_API_BASE_ROOT=https://demo.lodestar-dev.cc/api/v1
-REACT_APP_GRAPHQL_ENDPOINT=https://hasura-dev.kolable.com/v1/graphql
+REACT_APP_API_BASE_ROOT=https://demomo.lodestar-dev.cc/api/v1
+REACT_APP_GRAPHQL_ENDPOINT=https://hasura-staging.kolable.com/v1/graphql
 REACT_APP_CLAIMS_NAMESPACE=https://hasura.io/jwt/claims
 
 # AWS
