--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
-    "lodestar-app-element": "urfit-tech/lodestar-app-element#master",
+    "lodestar-app-element": "https://github.com/jhihruei/lodestar-app-element.git#feature/certificate-card",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
