--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/react": "^17.0.11",
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.8",
+    "@types/react-grid-layout": "^1.3.2",
     "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-star-rating-component": "^1.4.0",
@@ -116,6 +117,7 @@
     "react-contenteditable": "^3.3.5",
     "react-dom": "17.0.2",
     "react-draggable": "^4.4.4",
+    "react-grid-layout": "^1.3.4",
     "react-hook-form": "^6.11.0",
     "react-hot-loader": "^4.13.0",
     "react-intl": "5.20.9",
