--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
-    "lodestar-app-element": "urfit-tech/lodestar-app-element#v1.15.0",
+    "lodestar-app-element": "urfit-tech/lodestar-app-element#master",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
@@ -141,7 +141,7 @@
     "uuid": "8.3.2",
     "wavesurfer.js": "^4.1.1",
     "@types/chance": "^1.1.3",
-    "chance": "^1.1.7",
+    "chance": "^1.1.7"
   },
   "devDependencies": {
     "@types/chance": "^1.1.3"
