--- a/package.json
+++ b/package.json
@@ -66,10 +66,10 @@
     "@types/styled-components": "^5.1.9",
     "@types/uuid": "^8.3.0",
     "@types/wavesurfer.js": "^3.3.1",
-    "@uppy/core": "^2.0.3",
-    "@uppy/react": "^2.0.3",
-    "@uppy/tus": "^2.0.2",
-    "@uppy/xhr-upload": "^2.0.3",
+    "@uppy/core": "2.1.6",
+    "@uppy/react": "2.1.2",
+    "@uppy/tus": "2.2.0",
+    "@uppy/xhr-upload": "2.0.7",
     "antd": "4.9.4",
     "apollo": "2.32.5",
     "apollo-cache-inmemory": "1.6.6",
