--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "@cloudflare/stream-react": "^1.2.0",
     "@craftjs/core": "0.1.0-beta.20",
     "@craftjs/layers": "0.1.0-beta.20",
-    "@fullcalendar/daygrid": "^5.3.2",
-    "@fullcalendar/react": "^5.3.1",
+    "@fullcalendar/core": "^5.11.3",
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/list": "^5.11.3",
+    "@fullcalendar/react": "^5.11.2",
     "@hot-loader/react-dom": "^17.0.1",
     "@types/audiobuffer-to-wav": "^1.0.0",
     "@types/braft-editor": "^2.2.0",
