--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
-    "lodestar-app-element": "urfit-tech/lodestar-app-element#b6b702ace71d9c60ad539319565b1851c90816b5",
+    "lodestar-app-element": "urfit-tech/lodestar-app-element#master",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
