--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@hot-loader/react-dom": "^17.0.1",
     "@types/audiobuffer-to-wav": "^1.0.0",
     "@types/braft-editor": "^2.2.0",
+    "@types/chance": "^1.1.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.168",
     "@types/md5": "^2.3.0",
@@ -87,6 +88,7 @@
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-react-intl": "7",
     "braft-editor": "^2.3.9",
+    "chance": "^1.1.7",
     "coupon-code": "^0.4.5",
     "customize-cra": "^1.0.0",
     "dayjs": "^1.11.3",
@@ -142,9 +144,7 @@
     "typescript": "4.4.3",
     "use-query-params": "1.2.3",
     "uuid": "8.3.2",
-    "wavesurfer.js": "^4.1.1",
-    "@types/chance": "^1.1.3",
-    "chance": "^1.1.7"
+    "wavesurfer.js": "^4.1.1"
   },
   "husky": {
     "hooks": {
