--- a/package.json
+++ b/package.json
@@ -142,7 +142,8 @@
     "typescript": "4.4.3",
     "use-query-params": "1.2.3",
     "uuid": "8.3.2",
-    "wavesurfer.js": "^4.1.1"
+    "wavesurfer.js": "^4.1.1",
+    "xss": "^1.0.10"
   },
   "husky": {
     "hooks": {
