--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@cloudflare/stream-react": "^1.2.0",
     "@craftjs/core": "0.1.0-beta.20",
     "@craftjs/layers": "0.1.0-beta.20",
+    "@emotion/core": "^11.0.0",
     "@fullcalendar/core": "^5.11.3",
     "@fullcalendar/daygrid": "^5.11.3",
     "@fullcalendar/list": "^5.11.3",
