--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@craftjs/core": "0.1.0-beta.20",
     "@craftjs/layers": "0.1.0-beta.20",
     "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fullcalendar/core": "^5.11.3",
     "@fullcalendar/daygrid": "^5.11.3",
     "@fullcalendar/list": "^5.11.3",
