--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@emotion/styled": "^11.10.5",
     "@fullcalendar/core": "^5.11.3",
     "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/interaction": "^5.11.3",
     "@fullcalendar/list": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
     "@hot-loader/react-dom": "^17.0.1",
