--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "PUBLIC_URL=/admin CI=false env-cmd -f .env.${NODE_ENV:-production} react-app-rewired --max-old-space-size=4096 build",
     "test": "react-scripts test",
     "typegen": "apollo client:codegen ./src/hasura.d.ts --outputFlat --target typescript",
-    "format:organize-imports": "organize-imports-cli ./src/**/*.ts[x]",
-    "format:prettier": "prettier --write ./src/**/*.ts[x]",
+    "format:organize-imports": "organize-imports-cli ./src/***/**/*.ts[x]",
+    "format:prettier": "prettier --write ./src/***/**/*.ts[x]",
     "format": "npm run format:organize-imports && npm run format:prettier",
     "trans:compile": "tsc --noEmit false --outDir src/extracted",
     "trans:extract": "babel --config-file ./.intl.babelrc ./src/extracted > /dev/null",
