--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "react-contenteditable": "^3.3.5",
     "react-dom": "17.0.2",
     "react-draggable": "^4.4.4",
+    "react-ga": "3.3.0",
     "react-grid-layout": "^1.3.4",
     "react-hook-form": "^6.11.0",
     "react-hot-loader": "^4.13.0",
