--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
-    "lodestar-app-element": "urfit-tech/lodestar-app-element#master",
+    "lodestar-app-element": "urfit-tech/lodestar-app-element#80d652d",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
@@ -122,7 +122,6 @@
     "react-contenteditable": "^3.3.5",
     "react-dom": "17.0.2",
     "react-draggable": "^4.4.4",
-    "react-ga": "3.3.0",
     "react-grid-layout": "^1.3.4",
     "react-hook-form": "^6.11.0",
     "react-hot-loader": "^4.13.0",
