--- a/package.json
+++ b/package.json
@@ -166,5 +166,8 @@
   "resolutions": {
     "@craftjs/utils": "0.1.0-beta.20",
     "@types/react": "17"
+  },
+  "volta": {
+    "node": "14.21.2"
   }
 }
