--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "react-styled-frame": "^1.1.0",
     "sortablejs": "^1.13.0",
     "source-map-explorer": "^2.5.2",
-    "standardized-audio-context": "^25.1.9",
+    "standardized-audio-context": "25.3.33",
     "styled-components": "5.1.1",
     "ts-deep-pick": "0.2.2",
     "typescript": "4.4.3",
