--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,8 @@ PORT=5555
 REACT_APP_ID=demo
 
 # Hasura
-REACT_APP_API_BASE_ROOT=https://demomo.lodestar-dev.cc/api/v1
+#REACT_APP_API_BASE_ROOT=https://demomo.lodestar-dev.cc/api/v1
+REACT_APP_API_BASE_ROOT=http://localhost:8081/api/v1
 REACT_APP_GRAPHQL_ENDPOINT=https://lodestar-staging.hasura.app/v1/graphql
 REACT_APP_CLAIMS_NAMESPACE=https://hasura.io/jwt/claims
 
