--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
-    "lodestar-app-element": "urfit-tech/lodestar-app-element#v1.42.0",
+    "lodestar-app-element": "urfit-tech/lodestar-app-element#master",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
@@ -165,5 +165,8 @@
   "resolutions": {
     "@craftjs/utils": "0.1.0-beta.20",
     "@types/react": "17"
+  },
+  "volta": {
+    "node": "14.21.3"
   }
 }
