--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "dayjs": "^1.11.3",
     "env-cmd": "^10.1.0",
     "graphql": "^16.6.0",
+    "graphql-ws": "^5.12.1",
     "husky": "4.3.8",
     "jsonwebtoken": "^8.5.1",
     "lamejs": "^1.2.0",
