--- a/.env.development
+++ b/.env.development
@@ -5,6 +5,8 @@ REACT_APP_ID=demo
 # Hasura
 REACT_APP_API_BASE_ROOT=https://demomo.lodestar-dev.cc/api/v1
 REACT_APP_GRAPHQL_ENDPOINT=https://phdb-dev.kolable.com/v1/graphql
+REACT_APP_GRAPHQL_RH_ENDPOINT=https://phdb-dev.kolable.com/v1/graphql
+REACT_APP_GRAPHQL_PH_ENDPOINT=https://phdb-dev.kolable.com/v1/graphql
 REACT_APP_CLAIMS_NAMESPACE=https://hasura.io/jwt/claims
 
 # AWS
