--- a/.env.production
+++ b/.env.production
@@ -9,3 +9,4 @@ REACT_APP_S3_BUCKET=static.kolable.com
 
 # Server
 REACT_APP_KOLABLE_SERVER_ENDPOINT=/enterprise
+REACT_APP_LODESTAR_SERVER_ENDPOINT=/api/v2
