--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "react-contenteditable": "^3.3.5",
     "react-dom": "17.0.2",
     "react-draggable": "^4.4.4",
-    "react-error-overlay": "^6.0.9",
+    "react-error-overlay": "6.0.9",
     "react-grid-layout": "^1.3.4",
     "react-hook-form": "^6.11.0",
     "react-hot-loader": "^4.13.0",
@@ -156,7 +156,8 @@
   },
   "resolutions": {
     "@craftjs/utils": "0.1.0-beta.20",
-    "@types/react": "17"
+    "@types/react": "17",
+    "react-error-overlay": "6.0.9"
   },
   "volta": {
     "node": "14.19.0"
